--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 <!-- main body  -->
 {% macro mc_body2() %}
     <center> <h2>Cloud Native Fundamentals Scholarship Program <br>
-                 Nanodegree Program - Udacity</h2></center>
+                 Nanodegree Program - Udacity xxxxxxxxxxxxxx</h2></center>
 
     {% for key in lessons.keys() %}
             <br><br><br>
