--- a/templates/data/data_divers.html
+++ b/templates/data/data_divers.html
@@ -778,7 +778,7 @@ spec:
 <!-- =============================================================== -->
 {% set lessons = {
     'Kubernetes': {
-        'title': 'Lesson 1: GitHub Commands',
+        'title': 'Lesson 1: Divers GitHub Commands',
         'sections':[
             {
                 'title': 'A- GitHub Commands Add',
