--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,23 @@
     {% endfor %}
 {% endmacro %}
 
+{% set content = {
+    'cnfsp' : {
+        'title': 'Cloud Native Fundamentals Scholarship Program',
+        'subtitle': 'Nanodegree Program - Suse/Udacity',
+    },
+    'divers': {
+        'title': 'Divers Scholarship Program',
+        'subtitle': 'Divers - Suse/Udacity',
+    },
+    'git': {
+        'title': "GitHub commands",
+        'subtitle': "Git action & GitOps",
+    },
+}
+%}
+
+
 <html>
     <head>
         <link href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -78,13 +95,7 @@
         </style>
     </head>
     <body>
-        {% if data == "cnfsp" %}
-            {{ mc_body2("Cloud Native Fundamentals Scholarship Program", "Nanodegree Program - Suse/Udacity",
-                        lessons) }}
-        {% else %}
-            {{ mc_body2("GitHub commands", "Git action & GitOps", lessons) }}
-        {% endif %}
-
+        {{ mc_body2(content[data]['title'], content[data]['title'], lessons) }}
         <!-- ================================================================= -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
