--- a/templates/data/data_divers.html
+++ b/templates/data/data_divers.html
@@ -1882,3 +1882,13 @@ metadata:
     'cmds_cm_helm_exosol_01': cmds_cm_helm_exosol_01,
 }
 %}
+
+<!-- =============================================================== -->
+{% set program = {
+        'title': 'Divers Scholarship Program',
+        'subtitle': 'Divers - Suse/Udacity',
+        'lessons' : lessons,
+        'cmds' : cmds,
+    }
+%}
+<!-- =============================================================== -->
