--- a/templates/data/data_git.html
+++ b/templates/data/data_git.html
@@ -278,4 +278,13 @@ repo.git.checkout('master')", ""),
     }
 }
 %}
+
+<!-- =============================================================== -->
+{% set program = {
+        'title': "GitHub commands",
+        'subtitle': "Git action & GitOps",
+        'lessons' : lessons,
+        'cmds' : cmds,
+    }
+%}
 <!-- =============================================================== -->
