--- a/templates/index.html
+++ b/templates/index.html
@@ -73,10 +73,10 @@
 <!-- main body p_title, p_subtitle,  p_lessons)  -->
 {% macro build_body() %}
     <div id="mainctn">
-        <center> <h2>{{ program['title'] }} <br> {{ program['subtitle'] }} </h2></center><br><br>
+        <center> <h3 id="h201">{{ program['title'] }} <br> {{ program['subtitle'] }} </h3></center><br><br>
 
         {% for key in program['lessons'].keys() %}
-            {{ build_lesson_subsection(key, 2, program['lessons'][key]['title'], build_section, program['lessons'], 1) }}
+            {{ build_lesson_subsection(key, 3, program['lessons'][key]['title'], build_section, program['lessons'], 1) }}
         {% endfor %}
 
     </div>
@@ -84,22 +84,40 @@
 
 <!-- ================================================================= -->
 {% macro style01() %}
-    body{
-        background-color:#264653;
+    html {
+        background: #DCE3E6;
+        padding: 0 3%;
+    }
+
+    body {
+        max-width: 60em;
+        padding: 0 30px;
+        margin: 2em auto 2em;
+        background: #fff;
+        color: #333;
+        font: 1.156em/1.3 My Gill Sans, Lato, sans-serif;
+        font-size-adjust: 0.45;
+        position: relative;
+        box-shadow: 0 0.3em 1em #000;
     }
 
     #mainctn {
-        background-color:#ffffff;
-        font-family: Helvetica, sans-serif;
-        width:80%;
         height: 1000%;
-        margin:auto;
-        margin-top: 20px;
-        padding:20px;
+    }
+
+    #h201 {
+        column-span: all;
+        margin: 0 -30px 3em -30px;
+        padding: .6em 1em;
+        height: 3.3em;
+        border-left: solid transparent 90px;
+        border-right: solid transparent 110px;
+        color: #666;
+        background: #eee;
     }
 
     .cmd01 {
-      font-size: 14px;
+        font-size: 14px;
     }
 
     .pd0mg0 {
@@ -112,7 +130,7 @@
 <html>
     <head>
         <link href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <style> {{ style01() }} </style>
+        <style>  {{ style01() }}  </style>
     </head>
     <body>
         {{ build_body() }}
