--- a/templates/index_old.html
+++ b/templates/index_old.html
@@ -127,11 +127,23 @@
 %}
 
 {% macro style01() %}
-body {
+.body0 {
   font-family: Helvetica, sans-serif;
   width:80%;
   margin:auto;
   padding:20px;
+}
+
+body {
+    max-width: 60em;
+    padding: 0 20px;
+    margin: 6em auto 19em;
+    background: #fff;
+    color: #333;
+    font: 1.156em/1.3 My Gill Sans, Lato, sans-serif;
+    font-size-adjust: 0.45;
+    position: relative;
+    box-shadow: 0 0.3em 1em #000;
 }
 
 .cmd01 {
