--- a/templates/data/data_others.html
+++ b/templates/data/data_others.html
@@ -1787,7 +1787,7 @@ def pretty_date(dttm):
 
 # my_template.html
 My date is {{ my_object.created_at | pretty_date }}',
-"# @i: https://michaelcho.me/article/custom-jinja-template-filters-in-flask"),
+"# @i: https://michaelcho.me/article/custom-jinja-template-filters-in-flask <a href='#xx'>Book</a>"),
 
 ('C',"cat Dockerfile", data['dkrfl_pyhw'], "# To package a Python hello-world application"),
 ]
